# cvtor

./: .replit  ADMIN_DASHBOARD.md  pyproject.toml  replit.md
attached_assets/: Pasted-INFO-Will-watch-for-changes-in-these-directories-home-runner-workspace-backend-INFO--1762944578809_1762944578811.txt
backend/: .gitignore  README.md  _preview.html  _preview_professional.html  _preview_tokyo.html  _tmp_render.html  api.py  auth.py  create_tables.py  database.py  export_docx.py  generate_pdf_from_html.py  init_db.py  models.py  render_marlyse_pdf.bat  render_nevil_pdf.bat  requirements.txt  routes_auth.py  routes_resumes.py  routes_stripe.py  run_api.bat  seed_data.py  test_templates.py
backend/auth/: auth.py  routes_auth.py
backend/data/: resume_marlyse.json  resume_nevil.json  resume_test_professional.json  resume_with_photo.json
backend/database/: database.py  init_db.py
backend/models/: models.py
backend/services/: generate_pdf_from_html.py  render_cv.py  routes_admin.py  routes_fedapay.py  routes_resumes.py  routes_stripe.py  routes_templates_public.py
backend/templates/classique/: style.css  template.jinja2  template.json
frontend/: .env.local  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  test.html  tsconfig.json  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/editor/: page.tsx  (+1 more)
frontend/components/: AuthForm.tsx
frontend/lib/: api.ts  auth.ts  supabase-server.ts  supabase.ts  supabaseClient.ts
frontend/store/: editor.ts
(+588 files in other folders)
