[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "jinja2==3.1.4",
    "jsonschema==4.22.0",
    "playwright==1.40.0",
    "pydantic==2.9.2",
    "python-docx==0.8.11",
    "uvicorn[standard]==0.30.6",
]
